--- a/the_edge_training_board/web/index.html
+++ b/the_edge_training_board/web/index.html
@@ -96,14 +96,29 @@
   </script>
 
   <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="/__/firebase/8.3.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
 
   <!-- TODO: Add SDKs for Firebase products that you want to use
        https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script src="/__/firebase/8.3.1/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-auth.js"></script>
 
-  <!-- Initialize Firebase -->
-  <script src="/__/firebase/init.js"></script>
+  <script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyAwVyQwt8nzbdAxeuoKmBdn_RVS6oB5IbI",
+    authDomain: "the-edge-training-board.firebaseapp.com",
+    projectId: "the-edge-training-board",
+    storageBucket: "the-edge-training-board.appspot.com",
+    messagingSenderId: "700992528593",
+    appId: "1:700992528593:web:d9fbb5202da184ce3e25f0",
+    measurementId: "G-Y6FMVCXS11"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
 
 </body>
 </html>
